# gameengine-2.0

./: ARCHITECTURE_DIAGRAM.md  DESKTOP_BUILD_GUIDE.md  DESKTOP_PROJECT_SUMMARY.md  DESKTOP_QUICK_START.md  INTEGRATION_GUIDE.md  LICENSE  PROJECT_STATUS.md  WOLFMAN_ALPHA_COMPLETION_SUMMARY.md  WOLFMAN_ALPHA_IMPLEMENTATION.md  WOLFMAN_ALPHA_README.md  api-gui.css  api-gui.html  api-gui.js  build-windows.bat  build.ps1  build.sh  build_direct.bat  compile_direct.ps1
cpp_src/: APIGUIWindow.cpp  APIGUIWindow.h  AudioManager.cpp  AudioManager.h  BUILD_STATUS.md  BattleManager.cpp  BattleManager.h  CLASS_INDEX.md  CMakeLists.txt  CMakeLists_APIGui.txt  CMakeLists_WolfMan.txt  CacheEntry.cpp  CacheMap.h  ColorManager.cpp  ColorManager.h  ConfigManager.cpp  ConfigManager.h  DataManager.cpp  DataManager.h  ENGINE_LIBRARY_COMPLETE.md  EffectManager.cpp  EffectManager.h  Game_Action.cpp  Game_Action.h  Game_ActionResult.cpp  Game_ActionResult.h  Game_Actor.cpp  Game_Actor.h  Game_Actors.cpp  Game_Actors.h  Game_Armor.cpp  Game_Armor.h  Game_BattlerBase.cpp  Game_BattlerBase.h  Game_Battler_Ex.cpp  Game_Battler_Ex.h  Game_Character_Ex.cpp  Game_Character_Ex.h  Game_CommonEvent.cpp  Game_CommonEvent.h  (+214 more)
cpp_src/include/core/: BattleSystem.h  CombatCalculator.h  EventSystem.h  GameActorFull.h  GameMap.h  GameObject.h  GameParty.h  StateMachine.h
cpp_src/include/data/: Database.h
cpp_src/include/graphics/: Animation.h  GameScreen.h  Sprite.h  Tilemap.h
cpp_src/include/managers/: AudioManager.h  ConfigurationManager.h  DataManagerCore.h  GameManager.h  ResourceManager.h  SceneManagerCore.h
cpp_src/include/scenes/: SceneBase.h  SceneMenu.h  SceneTitle.h
cpp_src/include/ui/: WindowBase.h  WindowCommand.h
cpp_src/include/utils/: InputHandler.h  JsonUtils.h  MathUtils.h  TimeManager.h  Types.h
cpp_src/include/wolfman/: AI.h  AudioManager.h  Core.h  Debug.h  EntityComponentSystem.h  InputManager.h  Network.h  ParticleSystem.h  Physics.h  Renderer.h  Scripting.h  Utils.h  WolfManAlpha.h  all.h
cpp_src/src/core/: BattleSystem.cpp  CombatCalculator.cpp  EventSystem.cpp  GameActorFull.cpp  GameMap.cpp  GameObject.cpp  GameParty.cpp  StateMachine.cpp
cpp_src/src/data/: Database.cpp
cpp_src/src/graphics/: Animation.cpp  GameScreen.cpp  Sprite.cpp  Tilemap.cpp
cpp_src/src/managers/: AudioManager.cpp  ConfigurationManager.cpp  DataManagerCore.cpp  GameManager.cpp  ResourceManager.cpp  SceneManagerCore.cpp
cpp_src/src/scenes/: SceneBase.cpp  SceneMenu.cpp  SceneTitle.cpp
cpp_src/src/ui/: WindowBase.cpp  WindowCommand.cpp
cpp_src/src/utils/: InputHandler.cpp  JsonUtils.cpp  MathUtils.cpp  TimeManager.cpp
cpp_src/src/wolfman/: AI.cpp  (+12 more)
(+9 files in other folders)
